# dff_converter

./: .gitignore  .gitmodules  CMakeLists.txt  Converter.h  ConverterGLTF.cpp  ConverterGLTF.h  README.md  dff_converter.aps  dff_converter.rc  dff_converter.sln  dff_converter.vcxproj  dff_converter.vcxproj.filters  resource.h  util.h
lib/cximage/: cximagecrt.lib  cximagecrtd.lib
rwtools/: dffwrite.cpp  txdex.cpp
src/: CMakeLists.txt  main.cpp
src/converter/: Converter.h  ConverterGLTF.cpp  ConverterGLTF.h
src/rwtools/: dffconv.cpp  dffread.cpp  dumprwtree.cpp  oglnative.cpp  ps2native.cpp  renderware.cpp  renderware.h  rw_dffread.cpp  rw_dffwrite.cpp  rw_oglnative.cpp  rw_ps2native.cpp  rw_txdread.cpp  rw_txdwrite.cpp  rw_uvanim.cpp  rw_xboxnative.cpp  rwtools.cpp  rwtools.h  txdconv.cpp  txdread.cpp  uvanim.cpp  xboxnative.cpp
